--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "12873489237+github-actions[bot]@users.noreply.github.com"
+          git fetch origin gh-pages
+          git subtree pull --prefix public origin gh-pages -m "Sync with remote gh-pages"
           git subtree push --prefix public origin gh-pages
